# alanreyesv-mongodb-experiments-mongopysh

./: README.md  pyproject.toml
src/mdbpysh/: app.py  helpers.py  shell.py
src/mongopysh/: app.py  context.py  extensions.py  helpers.py  shell.py
