[tool.poetry]
name = "mongopysh"
version = "2023.10.3"
description = "Experimental Python-based alternative shell for MongoDB"
authors = ["Alan Reyes <alan.reyes@mongodb.com>"]
readme = "README.md"
packages = [
    { include = "mongopysh", from = "src" },
]

[tool.poetry.scripts]
mongopysh = "mongopysh.app:main"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.5.0"
typer = {extras = ["all"], version = "^0.9.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
